Bug 1615600 - Use a better error message for when an attempt is made to convert a non-integer number to a BigInt.  r=wingo

Differential Revision: https://phabricator.services.mozilla.com/D63282